examples/never-type/never_type.out
bal run never_type.bal
{"color":"blue"}
error: whoops
	at never_type:whoops(never_type.bal:22)
	   never_type:main(never_type.bal:31)
